// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <SQScanner
    os="win"
  />
  <h4
    className="huge-spacer-top spacer-bottom"
  >
    onboarding.analysis.sq_scanner.execute
  </h4>
  <p
    className="spacer-bottom markdown"
    dangerouslySetInnerHTML={
      Object {
        "__html": "onboarding.analysis.sq_scanner.execute.text",
      }
    }
  />
  <Command
    command={
      Array [
        "sonar-scanner.bat",
        "-Dsonar.projectKey=projectKey",
        undefined,
        "-Dsonar.sources=.",
        "-Dsonar.host.url=host",
        "-Dsonar.login=token",
      ]
    }
    isOneLine={true}
  />
  <p
    className="big-spacer-top markdown"
    dangerouslySetInnerHTML={
      Object {
        "__html": "onboarding.analysis.sq_scanner.docs",
      }
    }
  />
</div>
`;

exports[`renders correctly 2`] = `
<div>
  <SQScanner
    os="linux"
  />
  <h4
    className="huge-spacer-top spacer-bottom"
  >
    onboarding.analysis.sq_scanner.execute
  </h4>
  <p
    className="spacer-bottom markdown"
    dangerouslySetInnerHTML={
      Object {
        "__html": "onboarding.analysis.sq_scanner.execute.text",
      }
    }
  />
  <Command
    command={
      Array [
        "sonar-scanner",
        "-Dsonar.projectKey=projectKey",
        undefined,
        "-Dsonar.sources=.",
        "-Dsonar.host.url=host",
        "-Dsonar.login=token",
      ]
    }
    isOneLine={false}
  />
  <p
    className="big-spacer-top markdown"
    dangerouslySetInnerHTML={
      Object {
        "__html": "onboarding.analysis.sq_scanner.docs",
      }
    }
  />
</div>
`;

exports[`renders correctly 3`] = `
<div>
  <SQScanner
    os="linux"
  />
  <h4
    className="huge-spacer-top spacer-bottom"
  >
    onboarding.analysis.sq_scanner.execute
  </h4>
  <p
    className="spacer-bottom markdown"
    dangerouslySetInnerHTML={
      Object {
        "__html": "onboarding.analysis.sq_scanner.execute.text",
      }
    }
  />
  <Command
    command={
      Array [
        "sonar-scanner",
        "-Dsonar.projectKey=projectKey",
        "-Dsonar.organization=organization",
        "-Dsonar.sources=.",
        "-Dsonar.host.url=host",
        "-Dsonar.login=token",
      ]
    }
    isOneLine={false}
  />
  <p
    className="big-spacer-top markdown"
    dangerouslySetInnerHTML={
      Object {
        "__html": "onboarding.analysis.sq_scanner.docs",
      }
    }
  />
</div>
`;
